src/styles/ByPosterSection.css
.ByPosterSection {
  /* border: 2px solid coral; */
  /* height: 60vh; */
  height: 543px;
  margin-bottom: 20px;
}

.SectionHeader {
  color: white;
  font-family: "Raleway-SemiBold";
  font-size: 26px;
  margin: 0;
  padding-bottom: 3%;
  text-align: left;
  box-sizing: border-box;
}

.ByPosterPendingScreen {
  height: 100%;
  /* border: 1px solid red; */
  align-items: center;
  justify-content: center;
}

.ByPosterCreationFeedback {
  height: 100%;
  justify-content: center;
  align-items: center;
  font-family: "Raleway-Regular";
}

.ByPosterSectionGreenCircleContainer {
  margin-bottom: 10px;
  /* border: 1px solid red; */
  height: 50%;
  align-items: center;
}

.ByPosterCreationFeedback h4 {
  margin: 10px 0px 5px 0px;
  padding: 0;
  font-weight: 200;
  line-height: 22px;
  /* border: 1px solid green; */
  width: 90%;
}

.ByPosterCreationFeedback h1 {
  margin: 0px 0px 0px 0px;
  padding: 0;
  font-weight: 200;
}

.ByPosterPendingScreen span {
  margin-top: 50px;
}

.ByPosterButtonBig {
  color: white;
  border: none;
  /* border: 2px solid red; */
  background: none;
  height: 50px;
  width: 100%;
  /* padding: 12px 50px; */
  border-radius: 10px;
  font-family: 'Arial';
  font-size: 16px;
  font-weight: 600;
  background-color: #7316C6;
  align-items: center;
  /* font-weight: 300; */

}

.ByPosterButtonBig span {
  /* border: 1px solid white; */
  width: 100%;
}


.ByPosterCreationFeedback a {
  color: white;
  text-decoration: none;
}

.ByPosterCreationFeedback button {
  margin-top: 20px;
}


.ByPosterSectionContentWrapper {
  /* border: 3px solid blue; */
  min-height: 543px;
  max-height: 543px;
  box-sizing: border-box;
  width: 100%;
}

.PosterOptionContainer {
  font-size: 19px;
  font-family: "Raleway-Regular";
  justify-content: space-between;
  /* border: 2px solid yellow; */
  background-color: #09090D;
  height: 70px;
  width: 100%;
  align-items: center;
  padding: 4%;
  width: 100%;
  border-radius: 15px 15px 0px 0px;
  box-sizing: border-box;

}

.PosterOptionContainer span {
  /* border: 1px solid red; */
  width: 57%;
  max-width: 57%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: left;
}


.OptionButtonsContainer {}

.OptionButtonsContainer button {
  height: 25px;
  width: 25px;
  padding: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 35px;
  background: none;
  border: none;
  color: white;
}

.OptionButtonsContainer button:last-child {
  float: left;
  margin-left: 45px;
}

.PosterPlaylistAndSpinnerContainer {
  /* border: 1px solid red; */
  height: 70%;
  max-height: 70%;
  position: relative;
}

.PosterPlaylistSpinnerContainer {
  position: absolute;
  top: -2px;
  left: -1px;
  background-color: #343750;
  width: 100%;
  height: 101%;
  /* border: 2px solid green; */
  justify-content: center;
  align-items: center;
  /* opacity: 0.5; */
  z-index: 9;
  box-sizing: border-box;
}

.PosterPlaylistSpinnerContainer svg {
  /* margin-top: auto; */
  /* border: 1px solid red; */
  /* width: 100%; */
  /* height: 100%; */
}


.PosterPlaylistContainer {
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 1px;
  height: 100%;
  width: 100%;
  /* min-height: 70%; */
  /* max-height: 70%; */
  overflow-y: scroll;
  /* border: 1px solid white; */
  justify-content: center;
  align-items: center;
  /* position: relative; */
}

.PosterPlaylistContainer>a {
  text-decoration: none;
}




.PosterPlaylistContainer::-webkit-scrollbar {
  display: none;
}


.PosterPlaylistCard {
  /* border: 1px solid red; */
  height: 70px;
  width: 99%;
  /* border: 1px solid rgb(85, 85, 85); */
  /* border: 1px solid orange; */
  border-top: none;
  padding: 0px 10px;
  align-items: center;
  box-sizing: border-box;
}

.PosterPlaylistCardInfo {
  /* border: 1px solid yellow; */
  margin-left: 15px;
  justify-content: center;
  align-items: flex-start;
  color: white;
  text-align: left;
  max-width: 60%;
  font-family: "Arial";
}

.PosterPlaylistCard img {
  height: 50px;
  width: 50px;
}

.CurtailText {
  max-width: 100%;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  word-wrap: break-word;
  overflow: hidden;
  text-overflow: ellipsis;
}

.Curtail1 {
  -webkit-line-clamp: 1;
}

.Curtail2 {
  -webkit-line-clamp: 2;
}

.Curtail3 {
  -webkit-line-clamp: 3;
}

.PosterPlaylistCardInfo span:nth-child(1) {
  font-size: 13px;
  /* color: red; */
  margin-bottom: 5px;
}

.PosterPlaylistCardInfo span:nth-child(2) {
  font-size: 11px;
  /* color: blue; */
}



.PosterMakeButtonContainer {
  /* border: 1px solid yellow; */
  background-color: #09090D;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
  height: 96px;
  padding: 5%;
  box-sizing: border-box;
  border-radius: 0px 0px 15px 15px;
}

